objects/Contract__c.object
<CustomObject>
    <fields>
        <fullName>Submitted_for_Stakeholder_Review__c</fullName>
        <formula>SubmittedForStakeholderReview__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted for Stakeholder Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Director_ADT__c</fullName>
        <label>Technical Director Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technical_Director_Apl__c</fullName>
        <label>Technical Director Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Director_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Director Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <picklist>
            <picklistValues>
                <fullName>Danfoss Approved Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special / Customer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer_Name__c</columns>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Sales_Manager_of_Account__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Hard_Copy_Status__c</columns>
        <columns>Expiration_Action__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>Approval_Awaiting_From_Group_User__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>Danfoss_PS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_APAC_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Customer_Channel__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Sales_Manager_of_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Status__c</field>
            <operation>equals</operation>
            <value>Collaboration,Pending Approval</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <filters>
            <field>Customer_Country__c</field>
            <operation>equals</operation>
            <value>Australia,New Zealand</value>
        </filters>
        <label>Contract - APAC Awaiting Approval</label>
        <language>en_US</language>
        <sharedTo>
            <group>Contract_APAC_SM</group>
            <group>Contract_APAC_SVP</group>
            <group>Contract_APAC_TD</group>
            <group>Contract_BA_Electronic_Components</group>
            <group>Contract_BA_HPCC</group>
            <group>Contract_BA_HPOC</group>
            <group>Contract_BA_MP_CC</group>
            <group>Contract_BA_MP_OC</group>
            <group>Contract_BA_Motors</group>
            <group>Contract_BA_PVG_Valves</group>
            <group>Contract_BA_Steering</group>
            <group>Contract_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_China_Approval_Completed</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Customer_Channel__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>equals</operation>
            <value>Full Approval</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>Contract - China Approval Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>Contract_BA_Electronic_Components</group>
            <group>Contract_BA_HPCC</group>
            <group>Contract_BA_HPOC</group>
            <group>Contract_BA_MP_CC</group>
            <group>Contract_BA_MP_OC</group>
            <group>Contract_BA_Motors</group>
            <group>Contract_BA_PVG_Valves</group>
            <group>Contract_BA_Steering</group>
            <group>Contract_China_SM</group>
            <group>Contract_China_SVP</group>
            <group>Contract_China_TD</group>
            <group>Contract_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_China_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Customer_Channel__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Contract_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Status__c</field>
            <operation>equals</operation>
            <value>Collaboration,Pending Approval</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>Contract - China Awaiting Approval</label>
        <language>en_US</language>
        <sharedTo>
            <group>Contract_BA_Electronic_Components</group>
            <group>Contract_BA_HPCC</group>
            <group>Contract_BA_HPOC</group>
            <group>Contract_BA_MP_CC</group>
            <group>Contract_BA_MP_OC</group>
            <group>Contract_BA_Motors</group>
            <group>Contract_BA_PVG_Valves</group>
            <group>Contract_BA_Steering</group>
            <group>Contract_China_SM</group>
            <group>Contract_China_SVP</group>
            <group>Contract_China_TD</group>
            <group>Contract_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Europe_Approval_Completed</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Customer_Channel__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>equals</operation>
            <value>Full Approval</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>equals</operation>
            <value>Approval-Complete</value>
        </filters>
        <label>Contract - Europe Approval Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>Contract_BA_Electronic_Components</group>
            <group>Contract_BA_HPCC</group>
            <group>Contract_BA_HPOC</group>
            <group>Contract_BA_MP_CC</group>
            <group>Contract_BA_MP_OC</group>
            <group>Contract_BA_Motors</group>
            <group>Contract_BA_PVG_Valves</group>
            <group>Contract_BA_Steering</group>
            <group>Contract_EU_SD_DIST</group>
            <group>Contract_EU_SD_OEM</group>
            <group>Contract_EU_SM</group>
            <group>Contract_EU_SVP</group>
            <group>Contract_EU_TD</group>
            <group>Contract_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Europe_Awaiting_Approval</fullName>
        <columns>Sales_Manager_of_Account__c</columns>
        <columns>Customer__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Customer_Channel__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>NAME</columns>
        <columns>Sales_Stage__c</columns>
        <columns>Approval_Awaiting_From_Group_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Status__c</field>
            <operation>equals</operation>
            <value>Collaboration,Pending Approval</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>notEqual</operation>
            <value>Approval-Complete</value>
        </filters>
        <label>Contract - Europe Awaiting Approval</label>
        <language>en_US</language>
        <sharedTo>
            <group>Contract_BA_Electronic_Components</group>
            <group>Contract_BA_HPCC</group>
            <group>Contract_BA_HPOC</group>
            <group>Contract_BA_MP_CC</group>
            <group>Contract_BA_MP_OC</group>
            <group>Contract_BA_Motors</group>
            <group>Contract_BA_PVG_Valves</group>
            <group>Contract_BA_Steering</group>
            <group>Contract_EU_SD_DIST</group>
            <group>Contract_EU_SD_OEM</group>
            <group>Contract_EU_SM</group>
            <group>Contract_EU_SVP</group>
            <group>Contract_EU_TD</group>
            <group>Contract_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Global_Approval_Completed</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Customer_Channel__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>equals</operation>
            <value>Full Approval</value>
        </filters>
        <label>Contract - Global Approval Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>Contract_BA_Electronic_Components</group>
            <group>Contract_BA_HPCC</group>
            <group>Contract_BA_HPOC</group>
            <group>Contract_BA_MP_CC</group>
            <group>Contract_BA_MP_OC</group>
            <group>Contract_BA_Motors</group>
            <group>Contract_BA_PVG_Valves</group>
            <group>Contract_BA_Steering</group>
            <group>Contract_Finance</group>
            <group>Contract_Global_EVP</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Global_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Customer_Channel__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Status__c</field>
            <operation>equals</operation>
            <value>Collaboration,Pending Approval</value>
        </filters>
        <label>Contract - Global Awaiting Approval</label>
        <language>en_US</language>
        <sharedTo>
            <group>Contract_BA_Electronic_Components</group>
            <group>Contract_BA_HPCC</group>
            <group>Contract_BA_HPOC</group>
            <group>Contract_BA_MP_CC</group>
            <group>Contract_BA_MP_OC</group>
            <group>Contract_BA_Motors</group>
            <group>Contract_BA_PVG_Valves</group>
            <group>Contract_BA_Steering</group>
            <group>Contract_Finance</group>
            <group>Contract_Global_EVP</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_NA_Approval_Completed</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Customer_Channel__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Status__c</field>
            <operation>contains</operation>
            <value>Approved,Active,Expired,Inactive,Rejected</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Contract - NA Approval Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>Contract_BA_Electronic_Components</group>
            <group>Contract_BA_HPCC</group>
            <group>Contract_BA_HPOC</group>
            <group>Contract_BA_MP_CC</group>
            <group>Contract_BA_MP_OC</group>
            <group>Contract_BA_Motors</group>
            <group>Contract_BA_PVG_Valves</group>
            <group>Contract_BA_Steering</group>
            <group>Contract_Finance</group>
            <group>Contract_NA_SD_DIST</group>
            <group>Contract_NA_SM</group>
            <group>Contract_NA_SVP</group>
            <group>Contract_NA_TD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_NA_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Sales_Manager_of_Account__c</columns>
        <columns>Product__c</columns>
        <columns>Customer__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Approval_Awaiting_From_Group_User__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contract_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <filters>
            <field>Contract_Status__c</field>
            <operation>contains</operation>
            <value>Collaboration,Pending Approval</value>
        </filters>
        <label>Contract - NA Awaiting Approval</label>
        <language>en_US</language>
        <sharedTo>
            <group>Contract_BA_Electronic_Components</group>
            <group>Contract_BA_HPCC</group>
            <group>Contract_BA_HPOC</group>
            <group>Contract_BA_MP_CC</group>
            <group>Contract_BA_MP_OC</group>
            <group>Contract_BA_Motors</group>
            <group>Contract_BA_PVG_Valves</group>
            <group>Contract_BA_Steering</group>
            <group>Contract_Finance</group>
            <group>Contract_NA_SD_DIST</group>
            <group>Contract_NA_SM</group>
            <group>Contract_NA_SVP</group>
            <group>Contract_NA_TD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Missing_Data</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>SAP_Account_Id__c</columns>
        <columns>Customer_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MissingStuff__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Missing Data</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>PS_SysAdmin</group>
            <group>PlatformAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contracts</fullName>
        <columns>Customer__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>NAME</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>Customer_Country__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CRM_AMAPAC_PS</role>
            <role>CRM_AMDistAmerPS</role>
            <role>CRM_AMDistEuropePS</role>
            <role>CRM_AMGlobalPS</role>
            <role>CRM_AMOEMAmerPS</role>
            <role>CRM_AMOEMEurope_PS</role>
            <role>CRM_AM_Dist_ChinaPS</role>
            <role>CRM_AM_OEM_ChinaPS</role>
            <role>CRM_BusUnitPS</role>
            <role>CRM_Sales_Dctr_Global_PS</role>
            <role>CRM_Sales_Dctr_OEM_AMER_PS</role>
            <role>CRM_Sales_Director_APAC_PS</role>
            <role>CRM_Sales_Director_DIST_CHINA_PS</role>
            <role>CRM_Sales_Director_DIST_EU_PS</role>
            <role>CRM_Sales_Director_OEM_CHINA_PS</role>
            <role>CRM_Sales_Director_OEM_EU_PS</role>
            <role>CRM_Sales_Director_PS</role>
            <role>CRM_Sales_Mgr_APAC_PS</role>
            <role>CRM_Sales_Mgr_DIST_AMERPS</role>
            <role>CRM_Sales_Mgr_DIST_CHINA_PS</role>
            <role>CRM_Sales_Mgr_DIST_EU_PS</role>
            <role>CRM_Sales_Mgr_OEM_AMERPS</role>
            <role>CRM_Sales_Mgr_OEM_CHINA_PS</role>
            <role>CRM_Sales_Mgr_OEM_EU_PS</role>
            <role>CRM_ServiceMgrAmerPS</role>
            <role>CRM_Service_Team_Mgr_APAC_PS</role>
            <role>CRM_Service_Team_Mgr_CHINAPS</role>
            <role>CRM_Service_Team_Mgr_EU_PS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Legacy_Contracts</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contract_Status__c</columns>
        <columns>Sales_Manager_Apl__c</columns>
        <columns>Sales_Manager_Apr__c</columns>
        <columns>Sales_Director_Apl__c</columns>
        <columns>Sales_Director_Apr__c</columns>
        <columns>Sales_VP_Apl__c</columns>
        <columns>Sales_VP_Apr__c</columns>
        <columns>Sales_Executive_Apl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legacy__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Not Legacy Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PS_Non_Disclosure_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Contract_Type__c</columns>
        <columns>Sales_Manager_of_Account__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>Approval_Awaiting_From_Group_User__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Expiration_Action__c</columns>
        <columns>Hard_Copy_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Non-Disclosure Agreement - Exception,Non-Disclosure Agreement - Standard</value>
        </filters>
        <label>PS: Non-Disclosure Agreements</label>
        <language>en_US</language>
        <sharedTo>
            <group>Danfoss_PS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PS_OEM_Contracts_Global</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Manager_of_Account__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Sales_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Channel__c</field>
            <operation>equals</operation>
            <value>direct</value>
        </filters>
        <label>PS: OEM Contracts Global</label>
        <language>en_US</language>
        <sharedTo>
            <role>CRM_Sales_Dctr_Global_PS</role>
            <role>CRM_Sales_Dctr_OEM_AMER_PS</role>
            <role>CRM_Sales_Mgr_OEM_AMERPS</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CNT-{000000000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <recordTypes>
        <fullName>Approval_Bypass</fullName>
        <active>true</active>
        <description>Uploading signed contract that already went through approval process</description>
        <label>Approval Bypass</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Locked</fullName>
        <active>true</active>
        <label>Approval Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy_Contract</fullName>
        <active>true</active>
        <description>For Contracts that existed prior to v3 (deployed March 2015)</description>
        <label>Legacy Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Channel_Required</fullName>
        <active>true</active>
        <description>The selected account must have a channel selected</description>
        <errorConditionFormula>ISPICKVAL( Customer__r.Channel__c, &apos;&apos;)</errorConditionFormula>
        <errorMessage>The selected account must have a channel selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Extension_End_Date</fullName>
        <active>true</active>
        <description>require extension end date when selected expiration action is Extend</description>
        <errorConditionFormula>AND( ISPICKVAL(Expiration_Action__c , &apos;Extend&apos;), ISNULL(Review_Date__c))</errorConditionFormula>
        <errorDisplayField>Review_Date__c</errorDisplayField>
        <errorMessage>For extended contracts you must enter a date when the extension will end for further review.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Manager_Required</fullName>
        <active>true</active>
        <description>The selected account must have a sales manager entered</description>
        <errorConditionFormula>OR(ISNULL( Customer__r.Sales_Manager__c ), Customer__r.Sales_Manager__c == &apos;&apos;)</errorConditionFormula>
        <errorMessage>The selected account must have a sales manager entered.</errorMessage>
    </validationRules>
</CustomObject>